objects/ManuClub_Message__c/ManuClub_Message__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Message</label>
    <nameField>
        <label>ManuClub_Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManuClub_Message</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>