objects/ManuClub_Message__c/fields/Composite_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Composite_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Composite_External_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>