objects/ManuClub_Message__c/fields/Msg_Detail_Chi__c.field-meta.xml
<CustomField>
    <fullName>Msg_Detail_Chi__c</fullName>
    <label>Msg_Detail_Chi</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>