objects/ManuClub_Message__c/fields/Msg_Detail_Eng__c.field-meta.xml
<CustomField>
    <fullName>Msg_Detail_Eng__c</fullName>
    <label>Msg_Detail_Eng</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>