objects/ManuClub_Message__c/fields/Msg_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Msg_Expiry_Date__c</fullName>
    <label>Msg_Expiry_Date</label>
    <type>DateTime</type>
</CustomField>