objects/ManuClub_Message__c/fields/Msg_ID__c.field-meta.xml
<CustomField>
    <fullName>Msg_ID__c</fullName>
    <label>Msg_ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>