objects/ManuClub_Message__c/fields/Msg_Seq__c.field-meta.xml
<CustomField>
    <fullName>Msg_Seq__c</fullName>
    <label>Msg_Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>