objects/ManuClub_Message__c/fields/Msg_Type__c.field-meta.xml
<CustomField>
    <fullName>Msg_Type__c</fullName>
    <label>Msg_Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>