objects/ManuClub_Message__c/fields/Reward_Ref_Code__c.field-meta.xml
<CustomField>
    <fullName>Reward_Ref_Code__c</fullName>
    <label>Reward_Ref_Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>